fix: Address the issue related to hiding the overflow of the `AppProgressBar` element

--- a/src/elements/app-progress-bar/app-progress-bar.scss
+++ b/src/elements/app-progress-bar/app-progress-bar.scss
@@ -8,6 +8,7 @@
   top: 0;
   right: 0;
   left: 0;
+  overflow: hidden;
 }
 
 [part='bar'] {
